Fixed horizontal scroll

--- a/src/styles/components/boxSectionTransition.css
+++ b/src/styles/components/boxSectionTransition.css
@@ -1,5 +1,5 @@
 .box-section-container {
-  width: 100vw;
+  width: 100%;
 }
 
 .box-section-container section {
